--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
             
-                <section class="white pattern-white-carbon">
+                <section>
                     {% if apps %}
                         <ul class="polaroids">
                             {% for app in apps %}
