--- a/templates/applications/task_presenter_editor.html
+++ b/templates/applications/task_presenter_editor.html
@@ -22,9 +22,8 @@
 <div class="container-main">
     <section class="white">
         <div class="row">
-            <div class="col-sm-9">
+            <div class="col-xs-12">
                 <!-- Task Presenter Editor -->
-                <h1><strong>{{app.name}}</strong>: {{ _('Task Presenter Editor') }} <a class="btn btn-lg pull-right" href="http://docs.pybossa.com/en/latest/overview.html#task-presenter"><i class="glyphicon glyphicon-book"></i> {{ _('Help') }}</a></h1>
                 <form class="form-inline" method="post" action="{{ url_for('app.task_presenter_editor', short_name=app.short_name) }}">
                     {{ form.hidden_tag() }}
                     <fieldset>
@@ -39,17 +38,23 @@
             </div>
         </div>
         
-        <div id="modal-preview" class="modal hide big-modal">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">{{ _('&times;') }}</button>
-                <h2><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h2>
+        <div class="modal fade big-modal" id="modal-preview">
+          <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">{{ _('&times;') }}</button>
+                    <h2><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h2>
+                </div>
+                
+                <div class="modal-body">
+                        <iframe id="preview" frameBorder="0"></iframe>
+                </div>
+                    <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Close') }}</button>
+                </div>
             </div>
-            <div class="modal-body">
-                <iframe id="preview" frameBorder="0"></iframe>
-            </div>
-            <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{ _('Close') }}</button>
-            </div>
+          </div>
+        </div>
     </section>
 </div>
 <script>
