--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1060,7 +1060,7 @@ ul.users li a {
 -------------------------*/
 
 .remove-colour {
-  color: #404040;  
+  color: #404040 !important;  
 }
 
 p.muted {
@@ -1997,4 +1997,38 @@ background-color: rgba(255,255,255,1);
   z-index: 1;
   border: 1px solid rgba(255,255,255,0.5);
   padding: 10px 40px 30px 40px;
+}
+
+/*
+ * Code Editor
+ */
+
+.CodeMirror {
+  width: 100%;
+  height: 100%;
+  font-size: 12px;
+  padding-top: 35px;
+}
+
+#code-btns {
+  background-color: #F7F7F7;
+  padding-left: 34px;
+  border-bottom: 1px solid #DDDDDD;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+}
+
+.btn-code {
+  border-radius: 0px;
+  border-left: 1px solid #DDDDDD;
+  border-right: 1px solid #DDDDDD;
+  background-color: rgba(255,255,255,0.5);
+  color: #BA0000;
+  transition: background-color 0.25s;
+}
+
+.btn-code:hover,
+.btn-code:focus {
+  background-color: rgba(0,0,0,0.05);
 }
