--- a/templates/applications/stats.html
+++ b/templates/applications/stats.html
@@ -46,7 +46,7 @@
 
             <!-- Hour Stats CARD -->
             <div id="card" class="row">
-                <div class="white-rounded-panel pattern-brushed box-shadow-grey  margin-bottom">
+                <div class="white-rounded-panel  box-shadow-grey  margin-bottom">
                     <h2 class="inset-text-grey-header">{{_('Distribution of Answers per Hour')}}</h2>
                     <div class="col-xs-12">
                     <div id="hourStats" style="margin:20px;height:500px;">
@@ -79,7 +79,7 @@
 
             <!-- Day Stats Total CARD -->
             <div id="card" class="row">
-                <div class="white-rounded-panel pattern-brushed box-shadow-grey  margin-bottom">
+                <div class="white-rounded-panel  box-shadow-grey  margin-bottom">
                     <h2 class="inset-text-grey-header">{{_('Completed Tasks in the last 15 days')}} <small> {{_('select an area to zoom, click to reset the chart')}}</small></h2>
                     <div class="col-sm-12">
                     <div id="dayStatsTotal" style="margin:20px;height:500px;"></div>
@@ -152,7 +152,7 @@
 
             <!-- Day Stats CARD -->
             <div id="card" class="row">
-                <div  class="white-rounded-panel pattern-brushed box-shadow-grey  margin-bottom">
+                <div  class="white-rounded-panel  box-shadow-grey  margin-bottom">
                     <h2 class="inset-text-grey-header">{{_('Answers per day')}} <small> {{_('select an area to zoom, click to reset the chart')}}</small></h2>
                     <div class="col-xs-12">
                     <div id="dayStats" style="margin:20px;height:500px;"></div>
@@ -224,7 +224,7 @@
 
             <!-- Number of answers CARD -->
             <div id="card" class="row">
-                <div id="dist-answers" class="white-rounded-panel pattern-brushed box-shadow-grey  margin-bottom">
+                <div id="dist-answers" class="white-rounded-panel  box-shadow-grey  margin-bottom">
                     <h2 class="inset-text-grey-header">{{_('Distribution of Answers')}}</h2>
                     <div class="col-xs-12">
                     <div class="row">
@@ -273,7 +273,7 @@
 
             <!-- Anon User Stats CARD -->
             <div id="card" class="row">
-                <div id="dist-anon" class="white-rounded-panel pattern-brushed box-shadow-grey  margin-bottom">
+                <div id="dist-anon" class="white-rounded-panel  box-shadow-grey  margin-bottom">
                     <h2 class="inset-text-grey-header">{{_('Details about Anonymous Users')}}</h2>
                     <div class="col-xs-12">
                     <div class="row">
@@ -366,7 +366,7 @@
 
             <!-- Auth User Stats CARD -->
             <div id="card" class="row">
-                <div id="dist-auth" class="white-rounded-panel pattern-brushed box-shadow-grey  margin-bottom">
+                <div id="dist-auth" class="white-rounded-panel  box-shadow-grey  margin-bottom">
                     <h2 class="inset-text-grey-header">{{_('Details about Authenticated Users')}}</h2>
                     <div class="col-xs-12">
                     <div class="row">
