--- a/templates/applications/task_presenter_editor.html
+++ b/templates/applications/task_presenter_editor.html
@@ -36,12 +36,12 @@
             </div>
         </div>
         
-        <div class="modal fade big-modal" id="modal-preview">
+        <div class="modal fade" id="modal-preview">
           <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">{{ _('&times;') }}</button>
-                    <h2><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h2>
+                    <h3><strong>{{app.name}}</strong>: {{ _('Task Presenter Preview') }}</h3>
                 </div>
                 
                 <div class="modal-body">
