--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@ ul {
 }
 
 .project-desc {
-  height: 300px;
+  height: 310px;
   overflow-y: auto;
 }
 
@@ -177,7 +177,7 @@ div.white-rounded-panel {
 }
 
 #show-app-stats {
-  height: 300px;
+  height: 310px;
 }
 
 /* Layout */
@@ -1544,11 +1544,11 @@ display: flex;
     color: #fff;
     padding: 40%;
     opacity: 0;
-    -webkit-transition: opacity .2s;
-    -moz-transition: opacity .2s;
-    -ms-transition: opacity .2s;
-    -o-transition: opacity .2s;
-    transition: opacity .2s;
+    -webkit-transition: opacity .5s;
+    -moz-transition: opacity .5s;
+    -ms-transition: opacity .5s;
+    -o-transition: opacity .5s;
+    transition: opacity .5s;
     cursor: pointer;
 }
 
@@ -1814,7 +1814,6 @@ ul.polaroids .polaroid img {
 .shadow-circle {
   border-top: 1px solid #ECEDED;
   border-radius: 50%;
-  display: inline-block;
 }
 
 .shadow-circle::before {
@@ -1875,7 +1874,7 @@ ul.polaroids .polaroid img {
  */
 
 .meter {
-  height: 300px;
+  height: 310px;
   width: 50px;
   position: relative;
   background: #fff;
@@ -2004,8 +2003,8 @@ background-color: rgba(255,255,255,1);
  */
 
 .CodeMirror {
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
   font-size: 12px;
   padding-top: 35px;
 }
