--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -6,12 +6,12 @@
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
 
-<span class="set-main-bg" data-bg="pattern-white-carbon"></span>
+<span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded remove-padding-bottom">
     <section class="dark-grey pattern-classy-fabric">
         <div class="container padding-top">
             <div class="col-xs-10 col-xs-offset-1">
-                <ul class="nav nav-tabs">
+                <ul class="nav nav-pills">
                     {% for c in categories %}
                                 <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('app.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
                             {% endfor %}
@@ -23,9 +23,10 @@
         </div>
     </section>
         
-                    <div class="col-xs-10 col-xs-offset-1">
+                <div class="container">
+                    <div class="col-xs-12">
                         <div id="sorts" class="btn-group pull-right">
-                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Order by <span id="order">name</span> <span class="caret"></span></button>
+                            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">name</span> <span class="caret"></span></button>
                             <ul class="dropdown-menu" style="top:35px;">
                               <li><a href="#" data-sort-value="original-order">name</a></li>
                               <li><a href="#" data-sort-value="date">date</a></li>
@@ -34,6 +35,7 @@
                             </ul>
                         </div>
                     </div>
+                </div>
             
                 <section>
                     {% if apps %}
