--- a/templates/applications/tasks/epicollect.html
+++ b/templates/applications/tasks/epicollect.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <h2><i class="glyphicon glyphicon-external-link"></i> {{_('EpiCollect Plus Project')}}</h2> 
+    <h2><i class="fa fa-external-link"></i> {{_('EpiCollect Plus Project')}}</h2> 
     <h3>{{_('Use an EpiCollect Plus project')}}</h3>
   <p><a href="{{url_for(target, short_name=app.short_name,
       type='epicollect')}}" class="btn btn-inverse">{{_('Use the EpiCollect
