--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,10 @@
 /* Styling */
 /* ======= */
 
+.inline-block {
+  display: inline-block;
+}
+
 ul {
   -webkit-padding-start: 0px;
   list-style: none;
@@ -143,6 +147,10 @@ input[type="checkbox"] {
   padding-bottom: 50px;
 }
 
+.padding-bottom-sm {
+  padding-bottom: 30px;
+}
+
 .padding-left-xs {
   padding-left: 10px;
 }
@@ -163,9 +171,9 @@ input[type="checkbox"] {
 
 div.white-rounded {
     background-color: #FFFFFF;
-    border: 1px solid #ECEDED;
     padding: 20px 30px;
     border-radius: 15px;
+    border: 1px solid rgba(255,255,255,0.5);
 }
 
 div.white-rounded-panel {
@@ -1824,18 +1832,28 @@ ul.polaroids .polaroid img {
     -moz-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,0.2);
     -webkit-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,0.2);
     box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,0.2);
+    border: 1px solid rgba(255,255,255,0.5);
+}
+
+.inset-shadow-white {
+  -moz-box-shadow: inset 0px 0px 3px 1px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0px 0px 3px 1px rgba(0,0,0,0.1);
+  box-shadow: inset 0px 0px 3px 1px rgba(0,0,0,0.1);
+  border: 1px solid rgba(255,255,255,1);
 }
 
 .inset-shadow-top {
-  -moz-box-shadow: inset 0px 5px 2px -3px rgba(0,0,0,0.2);
-  -webkit-box-shadow: inset 0px 5px 2px -3px rgba(0,0,0,0.2);
-  box-shadow: inset 0 5px 2px -3px rgba(0,0,0,0.2);
+  -moz-box-shadow: inset 0 4px 3px -3px rgba(0,0,0,0.2);
+  -webkit-box-shadow: inset 0 4px 3px -3px rgba(0,0,0,0.2);
+  box-shadow: inset 0 4px 3px -3px rgba(0,0,0,0.2);
+  border-top: 1px solid rgba(255,255,255,0.5);
 }
 
 .inset-shadow-bottom {
   -moz-box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
   -webkit-box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
   box-shadow: inset 0 -3px 5px -3px rgba(0,0,0,0.2);
+  border-bottom: 1px solid rgba(255,255,255,0.5);
 }
 
 .div .text-shadow {
@@ -1857,11 +1875,35 @@ ul.polaroids .polaroid img {
   text-shadow: none;
 }
 
+.box-shadow-white-bottom {
+  box-shadow: 0px 0px 3px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 3px rgba(0,0,0,0.2);
+  z-index: 1;
+  border: 1px solid rgba(255,255,255,1);
+}
+
+.box-shadow-grey-bottom {
+  box-shadow: 2px 4px 4px -4px rgba(0,0,0,.4);
+  -webkit-box-shadow: 2px 4px 4px -4px rgba(0,0,0,.4);
+  -moz-box-shadow: 2px 4px 4px -4px rgba(0,0,0,.4);
+  z-index: 2;
+  border-bottom: 1px solid rgba(255,255,255,0.5);
+}
+
+.box-shadow-grey-top {
+box-shadow: 0px -3px 4px -4px rgba(0,0,0,.4);
+-webkit-box-shadow: 0px -3px 4px -4px rgba(0,0,0,.4);
+-moz-box-shadow: 0px -3px 4px -4px rgba(0,0,0,.4);
+z-index: 2;
+border-top: 1px solid rgba(255,255,255,0.5);
+}
+
 .box-shadow-grey {
   box-shadow: 0px 0px 3px rgba(0,0,0,.2);
   -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,.2);
   -moz-box-shadow: 0px 0px 3px rgba(0,0,0,.2);
-  z-index: 1;
+  z-index: 2;
   border: 1px solid rgba(255,255,255,0.5);
 }
 
@@ -2030,4 +2072,23 @@ background-color: rgba(255,255,255,1);
 .btn-code:hover,
 .btn-code:focus {
   background-color: rgba(0,0,0,0.05);
+}
+
+.web-badge {
+  max-height: 100px;
+  max-height: 100px;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -0-transition: .5s ease-in-out;
+}
+
+.web-badge:hover{
+  -webkit-filter: grayscale(0%);
+  -moz-filter: grayscale(0%);
+  -ms-filter: grayscale(0%);
+  -o-filter: grayscale(0%);
 }
