--- a/templates/account/_helpers.html
+++ b/templates/account/_helpers.html
@@ -33,8 +33,10 @@
 {% macro render_user_profile(user, upload_method, settings, private=True) %}
 <div class="row margin-bottom">
     <div class="col-sm-6 col-xs-12 text-center">
-        <div class="shadow shadow-circle">
-            {{ render_user_thumbnail(user, upload_method, class="img-circle profile-image img-responsive center-block") }}
+        <div class"inline-block">
+            <div class="shadow shadow-circle">
+                {{ render_user_thumbnail(user, upload_method, class="img-circle profile-image img-responsive center-block") }}
+            </div>
         </div>
         <h1 class="inset-text-grey">{{user.fullname}}</h1>
     </div>
