--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -21,7 +21,7 @@
                             {{ render_field(form.name, placeholder= _('Category name')) }}
                             {{ render_field(form.description, placeholder= _('Category description')) }}
                             <div class="form-actions">
-                                <button type="submit" class="btn btn-primary">{{_('Add Category')}}</button>
+                                <button type="submit" class="btn btn-danger">{{_('Add Category')}}</button>
                             </div>
                             </fieldset>
                         </form>
