--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -13,47 +13,57 @@
         <div class="col-sm-9" style="min-height:400px;">
             <h1><strong>Admin</strong></h1>
             <div class="row">
-                <div id="featured-apps" class="col-md-6 well">
+                <div id="featured-apps" class="col-sm-6">
+                                <div class="well">
                     <h2><i class="glyphicon glyphicon-star"></i> {{_('Featured Projects')}}</h2>
                     <p>{{_('Show projects on the front page')}}</p>
-                    <a href="{{url_for('admin.featured')}}" class="btn btn-primary">
+                    <a href="{{url_for('admin.featured')}}" class="btn btn-danger">
                         {{ _('Manage') }} <i class="glyphicon glyphicon-chevron-right"></i>
                     </a>
+                                </div>
                 </div>
-                <div id="categories" class="col-md-6 well">
+                <div id="categories" class="col-sm-6">
+                                <div class="well">
                     <h2><i class="glyphicon glyphicon-check"></i> {{_('Categories')}}</h2>
                     <p>{{_('Manage project categories')}}</p>
-                    <a href="{{url_for('admin.categories')}}" class="btn btn-primary">
+                    <a href="{{url_for('admin.categories')}}" class="btn btn-danger">
                         {{ _('Manage') }} <i class="glyphicon glyphicon-chevron-right"></i>
                     </a>
+                                </div>
                 </div>
             </div>
             <div class="row">
-                <div id="users" class="col-md-6 well">
+                <div id="users" class="col-"col-sm-6">
+                                <div class="well">
                     <h2><i class="glyphicon glyphicon-user"></i> {{_('Administrators')}}</h2>
                     <p>{{_('Manage administrators')}}</p>
-                    <a href="{{url_for('admin.users')}}" class="btn btn-primary">
+                    <a href="{{url_for('admin.users')}}" class="btn btn-danger">
                         {{ _('Manage') }} <i class="glyphicon glyphicon-chevron-right"></i>
                     </a>
+                                </div>
                 </div>
-                <div id="users-list" class="col-md-6 well">
+                <div id="users-list" class="col-sm-6">
+                                <div class="well">
                     <h2><i class="glyphicon glyphicon-list"></i> {{_('Users')}}</h2>
                     <p>{{_('Export a list of users')}}</p>
-                    <a href="{{url_for('admin.export_users', format='json')}}" class="btn btn-primary">
+                    <a href="{{url_for('admin.export_users', format='json')}}" class="btn btn-danger">
                         {{ _('JSON') }}
                     </a>
-                    <a href="{{url_for('admin.export_users', format='csv')}}" class="btn btn-primary">
+                    <a href="{{url_for('admin.export_users', format='csv')}}" class="btn btn-danger">
                         {{ _('CSV') }}
                     </a>
+                                </div>
                 </div>
             </div>
             <div class="row">
-                <div id="dashboard" class="col-md-6 well">
+                <div id="dashboard" class="col-sm-6">
+                                <div class="well">
                     <h2><i class="glyphicon glyphicon-dashboard"></i> {{_('Background Jobs')}}</h2>
                     <p>{{_('Monitor the background jobs')}}</p>
-                    <a href="{{url_for('rq_dashboard.overview')}}" class="btn btn-primary">
+                    <a href="{{url_for('rq_dashboard.overview')}}" class="btn btn-danger">
                         {{ _('Manage') }} <i class="glyphicon glyphicon-chevron-right"></i>
                     </a>
+                                </div>
                 </div>
             </div>
         </div>
