--- a/templates/admin/update_category.html
+++ b/templates/admin/update_category.html
@@ -20,7 +20,7 @@
                     {{ render_field(form.name, placeholder= _('Category name')) }}
                     {{ render_field(form.description, placeholder= _('Category description')) }}
                     <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">{{_('Update Category')}}</button>
+                        <button type="submit" class="btn btn-danger">{{_('Update Category')}}</button>
                         <a href="{{url_for('admin.categories')}}" class="btn" >{{_('Cancel')}}</a>
                     </div>
                     </fieldset>
