--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -24,7 +24,7 @@
     </section>
         
                 <div class="container">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 padding-top-xs">
                         <div id="sorts" class="btn-group pull-right">
                             <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-sort-value="original-order">Sort by <span id="order">name</span> <span class="caret"></span></button>
                             <ul class="dropdown-menu" style="top:35px;">
