--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -4,17 +4,19 @@
             <div class="col-md-11">
                 <h1>{{ _('About') }}</h1>
                 
-                <p>{{ brand }} is a crowd-sourcing platform with the ultimate goal of making important research material more
-                readily available to a wider audience.</p>
+                <p>{{ brand }} is a crowd-sourcing platform with the ultimate goal of making important research material available
+                to a wider audience.</p>
                     
-                <p>Each project at {{ brand }} contains a collection of tasks related to a specific area of research. These tasks
-                require human intelligence and are not things that can be accurately processed by computers. While
-                each individual task can usually be completed quickly, the collections of tasks are often vast. The only
+                <p>Each project contains a collection of tasks related to a specific area of research. These tasks are not things
+                that can be accurately processed by computers, they require human intelligence. While
+                each individual task can usually be completed quickly, the collections of tasks are often vast. Therefore, the only
                 feasible way to complete such a number of tasks within a reasonable length of time is via widespread user
                 contributions.</p>
                     
-                <p>By participating you will have a direct impact on helping future research by anyone interested in the diverse 
-                collections available at the British Library.</p>
+                <p>By participating you will have a direct impact on the availability of research material to anyone interested in
+                the diverse collections available at the British Library. Records matched, located, transcribed or translated as part of
+                opne of our crowd-sourcing projects will be quickly uploaded to the British Library's catalogues. These online catalogues
+                are free for anyone to search in their entirety.</p>
             </div>
         </div>
     </section>
@@ -24,10 +26,17 @@
             <div class="col-md-11">
                 <h1 class="inset-text-grey">{{ _('Technology') }}</h1>
                 
-                <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source framework for
-                crowd-sourcing projects. Individual applications are written in HTML and Javascript, with some also making use of
-                PHP.</p>
+                <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, which is a an open-source framework for the creation of
+                crowd-sourcing projects.</p>
+                
+                <p>Individual applications are primarily written in HTML and Javascript, with some making use of additional components, written in languages such as PHP.</p>
             </div>
+            <div class="col-sm-6 col-sm-offset-3 col-xs-12 padding-top-sm">
+                <div class="col-xs-4"><img src="{{url_for('static',filename='img/html-logo.png')}}" class="img-responsive web-badge"></div>
+                    <div class="col-xs-4"><img src="{{url_for('static',filename='img/css-logo.png')}}" class="img-responsive web-badge"></div>
+                        <div class="col-xs-4"><img src="{{url_for('static',filename='img/js-logo.png')}}" class="img-responsive web-badge"></div>
+            </div>
+                
         </div>
     </section>
                 
@@ -36,8 +45,8 @@
             <div class="col-md-11">
                 <h1 id="contact">{{ _('Contact information') }}</h1>
                 <ul>
-                    <li>For more info, email: <a href="mailto:info@pybossa.com">info@pybossa.com</a></li>
-                    <li>{{ _('Report any bugs, issues or improvements:') }} 
+                    <li>For more info, email: <a href="mailto:info@libcrowds.com">info@libcrowds.com</a></li>
+                    <li>To report any bugs, issues or improvements, visit: 
                         <a href="https://github.com/alexandermendes/BL-pybossa-theme/issues">{{ _('Github Issues') }}</a>
                     </li>            
                 </ul>
